--- a/cadastro.css
+++ b/cadastro.css
@@ -94,6 +94,248 @@ main {
     color: #FFFFFF;
 }
 
+#redes {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+#face {
+    height: 45px;
+    width: 140px;
+    background-color: #1877F2;
+    border: 0px;
+    border-radius: 3px;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#google {
+    height: 45px;
+    width: 140px;
+    background-color: #FFFFFF;
+    border: 0px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#twitch {
+    height: 45px;
+    width: 140px;
+    background-color: #9146FF;
+    border: 0px;
+    border-radius: 3px;
+    margin-left: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#imgT {
+    height: 35px;
+}
+
+img {
+    height: 25px;
+}
+
+#div3 {
+    height: 20px;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    color: #7e7e7e;
+    margin-top: 30px;
+}
+
+#h1 {
+    color: #7e7e7e;
+}
+
+#div3::before {
+    content: "_________________________";
+    position: relative;
+    margin-right: 10px;
+    bottom: 5px;
+}
+
+#div3::after {
+    content: "_________________________";
+    position: relative;
+    margin-left: 10px;
+    bottom: 5px;
+}
+
+#div4 {
+    height: 400px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+#input0 {
+    height: 45px;
+    width: 380px;
+    background-color: #000000;
+    border: 1px solid #555555;
+    padding-left: 16px;
+    border-radius: 2px;
+    outline: none;
+    font-size: 16px;
+}
+
+#input0:focus{
+    border: 1px solid #44D62C;
+}
+
+#select {
+    height: 45px;
+    width: 400px;
+    background-color: #000000;
+    border: 1px solid #555555;
+    padding-left: 16px;
+    border-radius: 2px;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: bold;
+    outline: none;
+}
+
+#select option {
+    background-color: #555555;
+}
+
+#input1 {
+    height: 45px;
+    width: 380px;
+    background-color: #000000;
+    border: 1px solid #555555;
+    padding-left: 16px;
+    border-radius: 2px;
+    outline: none;
+    font-size: 16px;
+}
+
+#input1:focus{
+    border: 1px solid #44D62C;
+}
+
+#input2 {
+    height: 45px;
+    width: 380px;
+    background-color: #000000;
+    border: 1px solid #555555;
+    padding-left: 16px;
+    border-radius: 2px;
+    outline: none;
+    font-size: 16px;
+}
+
+#input2:focus{
+    border: 1px solid #44D62C;
+}
+
+#input3 {
+    height: 45px;
+    width: 380px;
+    background-color: #000000;
+    border: 1px solid #555555;
+    padding-left: 16px;
+    border-radius: 2px;
+    outline: none;
+    font-size: 16px;
+}
+
+#input3:focus{
+    border: 1px solid #44D62C;
+}
+
+#eye {
+    position: relative;
+    bottom: 58px;
+    left: 168px;
+}
+
+#div5 {
+    height: 200px;
+    width: 100%;
+    font-size: 20px;
+}
+
+#lCheckbox {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 250px;
+    justify-content: space-around;
+    font-size: 16px;
+}  
+
+li {
+    display: flex;
+    
+}
+
+.txtLi {
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+/* styles.css */
+input[type="checkbox"] {
+    appearance: none; /* Remove o estilo padrão do navegador */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #555555;
+    border-radius: 3px;
+    background-color: #000000;
+    outline: none; /* Remove o contorno do foco */
+    cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+    background-color: #44D62C;
+    border-color: #44D62C;
+}
+
+/* Estilo do marcador da checkbox quando marcada */
+input[type="checkbox"]:checked::before {
+    content: "\2714"; /* Símbolo de checkmark Unicode */
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 18px;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#div6 {
+    position: relative;
+    top: 130px;
+    /* height: 300px; */
+    width: 100%;
+    color: #FFFFFF;
+}
+
+#txtH1 {
+    margin-bottom: 30px;
+}
+
 
 footer {
     height: 55px;
