--- a/cadastro.css
+++ b/cadastro.css
@@ -260,11 +260,26 @@ img {
     border: 1px solid #44D62C;
 }
 
+
 #eye {
-    position: relative;
-    bottom:46px;
+    position:relative;
+    bottom: 46px;
     left: 168px;
     cursor: pointer;
+    background-image: url(img/eye2.png);
+    background-size: 20px;
+    border: 0px;
+    z-index: 2;
+    height: 20px;
+    width: 20px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+#eye[type="checkbox"]:checked{
+    background-color: transparent;
+    background-image: url(img/eye1.png);
 }
 
 #div5 {
@@ -293,7 +308,7 @@ li {
     padding-top: 5px;
 }
 
-input[type="checkbox"] {
+.check[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -306,13 +321,13 @@ input[type="checkbox"] {
     cursor: pointer;
 }
 
-input[type="checkbox"]:checked {
+.check[type="checkbox"]:checked {
     background-color: #44D62C;
     border-color: #44D62C;
 }
 
 
-input[type="checkbox"]:checked::before {
+.check[type="checkbox"]:checked::before {
     content: "\2714";
     display: block;
     width: 100%;
@@ -350,8 +365,8 @@ input[type="checkbox"]:checked::before {
 }
 
 #btnCaptcha {
-    height: 85px;
-    width: 365px;
+    height: 82px;
+    width: 345px;
     display: flex;
     align-items: center;
     padding-left: 20px;
@@ -363,17 +378,42 @@ input[type="checkbox"]:checked::before {
 
 #txtCaptcha {
     position: relative;
-    top: 53px;
+    top: 50px;
     right: 40px;
     cursor: pointer;
 }
 
-#inputCaptcha {
-    height: 35px;
+
+#inputCaptcha[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     width: 35px;
+    height: 35px;
+    border: 1px solid #000000;
+    border-radius: 5px;
     background-color: #FFFFFF;
-    border: 2px solid #000000;
-    border-radius: 6px;
+    outline: none;
+    cursor: pointer;
+}
+
+#inputCaptcha[type="checkbox"]:checked {
+    background-color: transparent;
+    border: 0px;
+}
+
+#inputCaptcha[type="checkbox"]:checked::before {
+    content: "\2713";
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 18px;
+    color: #44D62C;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 #div7 {
